--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,46 @@
-# Core ML/DL
-torch==2.6.0
-torchvision==0.21.0
-triton==3.2.0
-
-# FastAPI & Server
-fastapi==0.115.12
-uvicorn==0.34.0
-
-# Scientific stack
-numpy==2.2.4
-pillow==11.1.0
-sympy==1.13.1
-networkx==3.4.2
-fsspec==2025.3.2
-
-# Typing & Pydantic
-pydantic==2.11.2
-pydantic_core==2.33.1
-typing_extensions==4.13.1
-typing-inspection==0.4.0
-
-# Async tools (used by FastAPI)
+annotated-types==0.7.0
 anyio==4.9.0
-sniffio==1.3.1
-h11==0.14.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
 click==8.1.8
+exceptiongroup==1.2.2
+fastapi==0.115.12
+filelock==3.18.0
+fsspec==2025.3.2
+h11==0.14.0
+idna==3.10
 Jinja2==3.1.6
 MarkupSafe==3.0.2
-idna==3.10
+mpmath==1.3.0
+networkx==3.4.2
+numpy==2.2.4
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+pillow==11.1.0
+pydantic==2.11.2
+pydantic_core==2.33.1
+pickle4==0.0.1
+requests==2.32.3
+scipy==1.15.2
+sniffio==1.3.1
+starlette==0.46.1
+sympy==1.13.1
+torch==2.6.0
+torch-utils==0.1.2
+torchvision==0.21.0
+triton==3.2.0
+typing-inspection==0.4.0
+typing_extensions==4.13.1
+urllib3==2.3.0
+uvicorn==0.34.0
